# pyics

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/migration/: .gitkeep
docs/tutorials/: .gitkeep
docs/v1/: .gitkeep
pyics/auth/: .gitkeep
pyics/calendar/: .gitkeep
pyics/cli/: .gitkeep  ioc.py
pyics/cli/logic/: main.py
pyics/cli/primitives/: main.py
pyics/cli/protocols/: main.py
pyics/cli/registry/: main.py
pyics/cli/structures/: main.py
pyics/cli/transformations/: main.py
pyics/cli/transforms/: main.py
pyics/cli/validators/: main.py
pyics/core/: .gitkeep  data_types.py  ioc_registry.py  relations.py
pyics/core/_preserved_complex_structures/: composition_implementations_preserved.md  primitives_interfaces_preserved.md  protocols_compliance_preserved.md  protocols_contracts_preserved.md  protocols_interfaces_preserved.md  registry_implementations_preserved.md  registry_interfaces_preserved.md  registry_tests_preserved.md  routing_implementations_preserved.md  routing_interfaces_preserved.md  routing_tests_preserved.md  safety_tests_preserved.md  structures_implementations_preserved.md  transformations_implementations_preserved.md  transformations_interfaces_preserved.md  validators_implementations_preserved.md  validators_tests_preserved.md
pyics/core/_preserved_logic/: config.py  lambda.py  operations.py  relations.py
pyics/core/composition/: __init__.py  composition_engine.py  function_composition.py  lambda_calculus.py
pyics/core/primitives/: atomic_operations.py  config.py
pyics/core/protocols/: README.md  domain_contracts.py  rift_interfaces.py  transformation_protocols.py  validation_protocols.py
pyics/core/registry/: README.md  __init__.py  component_registry.py  lifecycle_management.py
pyics/core/routing/: __init__.py  (+3 more)
pyics/distribution/: .gitkeep
pyics/hooks/: .gitkeep
pyics/notify/: .gitkeep
pyics/telemetry/: .gitkeep
scripts/: .gitkeep
scripts/development/: pyics_architecture_validator.py  validate_core_structure.py
tests/e2e/: .gitkeep
tests/unit/: .gitkeep
tests/v1/: .gitkeep
tests/v2/: .gitkeep
tests/v3_preview/: .gitkeep
(+90 files in other folders)
